# scikit-packing

./: .flake8  LICENSE  README.md  pyproject.toml  setup.cfg
skpacking/circle/: smallestbounding.py
