[metadata]
name = skpacking
version = attr: skpacking.VERSION
description = Library of packing and covering algoritms
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = packing, covering
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    importlib-metadata; python_version<"3.8"

[options.packages.find]
exclude =
    docs*
